--- a/package.json
+++ b/package.json
@@ -2,28 +2,56 @@
   "name": "por_verifier_server",
   "version": "1.0.0",
   "description": "HTTP server for plonky2_por verification",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node --watch --env-file=.env src/index.js",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest --silent"
   },
   "dependencies": {
     "axios": "1.9.0",
     "crypto": "1.0.1",
+    "dotenv": "16.5.0",
     "express": "4.21.2",
     "ipaddr.js": "2.2.0",
     "sqlite3": "5.1.7",
-    "unzipper": "0.10.14"
+    "unzipper": "0.12.3"
   },
   "devDependencies": {
+    "@types/express": "4.17.21",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.11.24",
+    "@types/sqlite3": "3.1.11",
+    "@types/supertest": "6.0.2",
+    "@types/unzipper": "0.10.5",
     "jest": "29.7.0",
-    "supertest": "6.3.4"
+    "supertest": "6.3.4",
+    "ts-jest": "29.1.2",
+    "ts-node-dev": "2.0.0",
+    "typescript": "5.3.3"
   },
   "jest": {
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
-      "./tests/setup.js"
-    ]
+      "./tests/setup.ts"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsconfig": "tsconfig.json"
+      }
+    }
   }
 }
