--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dotenv": "16.5.0",
     "express": "4.21.2",
     "ipaddr.js": "2.2.0",
-    "lru-cache": "^11.1.0",
+    "lru-cache": "11.1.0",
     "sqlite3": "5.1.7",
     "unzipper": "0.12.3"
   },
