feat: added migrations and refactored api routes to parse and store asset information

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 API_KEY=test-api-key
+ADMIN_API_KEY=admin-test-api-key
 
 # If you change the port here you will need to change in the Dockerfile also
 PORT=3000
