--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "HTTP server for plonky2_por verification",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "npm run build:server && npm run copy:assets",
+    "build:server": "tsc",
+    "copy:assets": "cp -r src/views dist/ && cp -r src/public dist/",
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test": "jest --silent"
