--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -43,6 +43,11 @@ jobs:
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
 
+    - name: Set up GKE credentials
+      uses: google-github-actions/get-gke-credentials@v2
+      with:
+        cluster_name: ${{ vars.GKE_CLUSTER }}
+
     - name: Configure Docker
       run: gcloud auth configure-docker ${{ vars.REGION }}-docker.pkg.dev
 
@@ -51,6 +56,10 @@ jobs:
         docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
         docker push ${{ env.IMAGE_NAME }}:latest
 
-    - name: Deploy image
+    - name: Rollout new image
       run: |
-        gcloud compute instances update-container --container-image=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }} por-verifier --zone=${{ vars.ZONE }}
+        kubectl set image -n por-verifier-server deployment/por-verifier-server por-verifier-server=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+
+    - name: Wait for rollout
+      run: |
+        kubectl rollout status -n por-verifier-server deployment/por-verifier-server --timeout=120s
