--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ jobs:
       id-token: write
 
     env:
-      IMAGE_NAME: ${{ vars.REPOSITORY_URL }}/por-verifier-server
+      IMAGE_NAME: ${{ vars.REGISTRY_URL }}/por-verifier-server
       IMAGE_TAG: ${{ github.ref_name }}
 
     steps:
@@ -58,8 +58,8 @@ jobs:
 
     - name: Rollout new image
       run: |
-        kubectl set image -n por-verifier-server deployment/por-verifier-server por-verifier-server=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
+        kubectl set image -n ${{ vars.NAMESPACE }} ${{ vars.RESOURCE_TYPE }}/${{ vars.RESOURCE_NAME }} ${{ vars.RESOURCE_NAME }}=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
 
     - name: Wait for rollout
       run: |
-        kubectl rollout status -n por-verifier-server deployment/por-verifier-server --timeout=120s
+        kubectl rollout status -n ${{ vars.NAMESPACE }} ${{ vars.RESOURCE_TYPE }}/${{ vars.RESOURCE_NAME }} --timeout=120s
