--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,60 +6,22 @@ on:
     - '**'
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
-    environment: prod
-
+  build:
+    uses: otter-eng/workflows/.github/workflows/build-image.yaml@main
+    with:
+      environment: prod
+      name: por-verifier-server
+      tag: ${{ github.ref_name }}
     permissions:
       contents: read
       id-token: write
 
-    env:
-      IMAGE_NAME: ${{ vars.REGISTRY_URL }}/por-verifier-server
-      IMAGE_TAG: ${{ github.ref_name }}
-
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-
-    - name: Build Docker image
-      uses: docker/build-push-action@v6
-      with:
-        push: false # GCP credentials are short-lived (5 minutes), so we can't init creds first, have possibly >5 min build, and then push using those creds
-        load: true
-        tags: ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }},${{ env.IMAGE_NAME }}:latest
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
-
-    - id: auth
-      name: Authenticate with GCP
-      uses: google-github-actions/auth@v2
-      with:
-        project_id: '${{ vars.PROJECT_ID }}'
-        workload_identity_provider: '${{ vars.WORKLOAD_IDENTITY_PROVIDER }}'
-    
-    - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v2
-
-    - name: Set up GKE credentials
-      uses: google-github-actions/get-gke-credentials@v2
-      with:
-        cluster_name: ${{ vars.GKE_CLUSTER }}
-
-    - name: Configure Docker
-      run: gcloud auth configure-docker ${{ vars.REGION }}-docker.pkg.dev
-
-    - name: Push image
-      run: |
-        docker push ${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-        docker push ${{ env.IMAGE_NAME }}:latest
-
-    - name: Rollout new image
-      run: |
-        kubectl set image -n ${{ vars.NAMESPACE }} ${{ vars.RESOURCE_TYPE }}/${{ vars.RESOURCE_NAME }} ${{ vars.RESOURCE_NAME }}=${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
-
-    - name: Wait for rollout
-      run: |
-        kubectl rollout status -n ${{ vars.NAMESPACE }} ${{ vars.RESOURCE_TYPE }}/${{ vars.RESOURCE_NAME }} --timeout=120s
+  release:
+    needs: build
+    uses: otter-eng/workflows/.github/workflows/deploy-to-gke.yaml@main
+    with:
+      environment: prod
+      containers: "por-verifier-server=por-verifier-server:${{ github.ref_name }}"
+    permissions:
+      contents: read
+      id-token: write
