--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lru-cache": "11.1.0",
     "morgan": "^1.10.0",
     "sqlite3": "5.1.7",
+    "tar": "^7.4.3",
     "unzipper": "0.12.3"
   },
   "devDependencies": {
